--- a/app/.env.template
+++ b/app/.env.template
@@ -1,2 +1,7 @@
 APP_CONFIG__DB__URL=postgresql+asyncpg://user:pwd@localhost:5432/app
 APP_CONFIG__DB__ECHO=1
+
+POSTGRES_DB=app
+POSTGRES_USER=user
+POSTGRES_PASSWORD=pwd
+POSTGRES_PORT=5432
