--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ services:
 
   pg:
     image: postgres
-    environment:
-      POSTGRES_DB: app
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: pwd
+    env_file:
+      - app/.env
     ports:
       - "5432:5432"
