--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,14 @@ services:
       - app/.env
     ports:
       - "5432:5432"
+
+
+  minio:
+    image: minio/minio
+    container_name: local_minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    env_file:
+      - app/.env
+    command: server /data --console-address ":9001"
