add: aioboto3 dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
 asyncpg = "^0.29.0"
 alembic = "^1.13.1"
 orjson = "^3.11.5"
+aioboto3 = "^15.5.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
