add: python-slugify dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ alembic = "^1.13.1"
 orjson = "^3.11.5"
 aioboto3 = "^15.5.0"
 types-aiobotocore = {extras = ["s3"], version = "^3.1.0"}
+python-slugify = "==8.0.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
