--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ orjson = "^3.11.5"
 aioboto3 = "^15.5.0"
 types-aiobotocore = {extras = ["s3"], version = "^3.1.0"}
 python-slugify = "==8.0.4"
+gunicorn = "^24.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
