--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,22 @@
 services:
 
+  web:
+    build: .
+    container_name: fastapi_movie_app
+    command: python app/run.py
+    ports:
+      - "8000:8000"
+    env_file:
+      - app/.env
+    environment:
+      - POSTGRES_HOST=pg
+      - MINIO_HOST=minio
+    depends_on:
+      - pg
+      - minio
+    volumes:
+      - .:/app
+
   pg:
     image: postgres
     container_name: db_postgres
