--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,10 @@ python-slugify = "==8.0.4"
 gunicorn = "^24.0.0"
 taskiq = "^0.12.1"
 taskiq-aio-pika = "^0.5.0"
-taskiq-aio-pika = "^0.4.0"
+taskiq-fastapi = "^0.4.0"
+mypy = "^1.19.1"
+types-gunicorn = "==24.1.0.20260127"
+types-aioboto3 = "==15.5.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
