--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ types-gunicorn = "==24.1.0.20260127"
 types-aioboto3 = "==15.5.0"
 faststream = {extras = ["nats"], version = "^0.6.5"}
 python-multipart = "^0.0.22"
+redis = "^7.1.0"
+blinker = "^1.9.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
