--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,3 +54,15 @@ services:
       - "4222:4222"
       - "8222:8222"
     command: ["-js", "-m", "8222"]
+
+
+  redis:
+    image: redis:8-alpine
+    container_name: movie_redis
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      timeout: 3s
+      retries: 5
