--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ faststream = {extras = ["nats"], version = "^0.6.5"}
 python-multipart = "^0.0.22"
 redis = "^7.1.0"
 elasticsearch = "^9.3.0"
+dishka = "^1.7.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
-
