add: sentry-sdk dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ redis = "^7.1.0"
 elasticsearch = "^9.3.0"
 dishka = "^1.7.2"
 prometheus-fastapi-instrumentator = "^7.1.0"
+sentry-sdk = {extras = ["fast-api"], version = "^2.52.0"}
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
