update: .env.template

--- a/app/.env.template
+++ b/app/.env.template
@@ -1,7 +1,37 @@
 APP_CONFIG__DB__URL=postgresql+asyncpg://user:pwd@localhost:5432/app
-APP_CONFIG__DB__ECHO=1
+APP_CONFIG__DB__ECHO=0
 
 POSTGRES_DB=app
 POSTGRES_USER=user
 POSTGRES_PASSWORD=pwd
 POSTGRES_PORT=5432
+
+RABBITMQ_DEFAULT_USER=guest
+RABBITMQ_DEFAULT_PASS=guest
+
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
+
+APP_CONFIG__S3__ENDPOINT_URL=http://localhost:9000
+APP_CONFIG__S3__ACCESS_KEY=minioadmin
+APP_CONFIG__S3__SECRET_KEY=minioadmin
+APP_CONFIG__S3__BUCKET_NAME=movie
+APP_CONFIG__S3__REGION=us-east-1
+
+APP_CONFIG__TASKIQ__URL=amqp://guest:guest@localhost:5672/
+
+APP_CONFIG__FASTSTREAM__NATS_URL=nats://localhost:4222
+
+APP_CONFIG__REDIS__URL=redis://localhost:6379/0
+
+APP_CONFIG__ELASTICSEARCH__URL=http://localhost:9200
+ELASTICSEARCH_HOSTS=http://localhost:9200
+
+APP_CONFIG__METRICS__ENABLED=0
+APP_CONFIG__METRICS__ENDPOINT=/metrics
+
+APP_CONFIG__SENTRY__DSN=YOR_SENTRY_DSN_HERE!!!
+
+APP_CONFIG__OTLP__SERVICE_NAME=fastapi-movie-app
+APP_CONFIG__OTLP__ENDPOINT=localhost:4317
+APP_CONFIG__OTLP__ENABLED=0
